--- a/aboutme.htm
+++ b/aboutme.htm
@@ -59,7 +59,7 @@ body {
   </div>
   <div id="rightcol">
 <p>ABOUT ME</p>
-  <p>My name is Elise. I'm completing my certificate in web design. I like music: rap, punk, metal, techno, industrial - pretty much everything except country. I'm vegetarian. I'm addicted to chapstick. I stay Three 6 Mafia style and do it up like Cypress Hill. That's right.</p>
+  <p>My name is Elise. I'm completing my certificate in web design. I like music: rap, punk, metal, techno, industrial - pretty much everything except country. </p>
 <script type="text/javascript">
 <!--
 
