--- a/randomtxt.htm
+++ b/randomtxt.htm
@@ -6,7 +6,7 @@
 <script language="JavaScript">
 
 
-var Quotation=new Array() // do not change this!
+var Quotation=new Array() // do not change this! Unless you want to
 
 // Set up the quotations to be shown, below.
 // To add more quotations, continue with the
